2011-02-09  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fixed positioned elements at very top or bottom of page remain fixed but clip during rubber-banding
        <rdar://problem/7615997>
        https://bugs.webkit.org/show_bug.cgi?id=54054

        Take the overhang into account when calculating position for elements with position: fixed.

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::scrollXForFixedPosition):
        (WebCore::ScrollView::scrollYForFixedPosition):
        (WebCore::ScrollView::scrollOffsetForFixedPosition):
        * platform/ScrollView.h:
        * rendering/RenderView.cpp:
        (WebCore::RenderView::mapLocalToContainer):
        (WebCore::RenderView::mapAbsoluteToLocalPoint):
        (WebCore::RenderView::computeRectForRepaint):

2011-02-09  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dirk Schulze.

        Enhance ShadowBlur to tile inset box shadows
        https://bugs.webkit.org/show_bug.cgi?id=51567
        
        Add a tiling code path to ShadowBlur for rendering inset
        box-shadows.

        Test: fast/box-shadow/inset-box-shadows.html
        
        * platform/graphics/ShadowBlur.cpp:
        (WebCore::computeSliceSizesFromRadii): Compute the slice sizes
        for the eight-piece shadow template.
        (WebCore::ShadowBlur::templateSize): Compute the size of the template,
        given the slice sizes.
        (WebCore::ShadowBlur::drawRectShadow): Bail early if layerRect is empty
        (which probably means we're clipped out). Call templateSize() and use
        the result to decide whether to tile.
        (WebCore::ShadowBlur::drawInsetShadow): New method for inset shadows.
        (WebCore::ShadowBlur::drawRectShadowWithoutTiling): Code moved.
        (WebCore::ShadowBlur::drawInsetShadowWithoutTiling): The non-tiling code
        path for inset shadows.
        (WebCore::ShadowBlur::drawInsetShadowWithTiling): Fill the shadow template